2002-01-14  Richard Hestilow  <hestilow@ximian.com>

	* Gnome 2 port. (Settings only halfway work right now.)

2001-09-29  Richard Hestilow  <hestilow@ximian.com>

	* prefs-widget.c (prefs_widget_set_arg): Register
	callbacks after loading the preferences; otherwise they will
	get triggered unnecessarily.
	(selected_cb): Only trigger a change if there really was one.
	Fixes bug #9161.

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): distcheck fixes
